--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>LOGIN PAGE</title>
-    <link rel="stylesheet" href="dashboardmobile.css">
+    <link rel="stylesheet" href="stylemobile.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
